--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	<div class="row zeile4">
 		<div class="col-sm-12 col-xs-12 intro">
 			<div class="block height-x2 violett text">
-				<h2>Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und desMyTheo e.V.</h2><p>Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen. Gemeinsamwollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen einreißen und dafür sorgen, dass Kinder einen Ort haben, an dem sie miteinander aufwachsen und Spaß haben, egal woher sie kommen. Helfen Sie uns das Projekt zu finanzieren.</p>
+				<h2>Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des
+MyTheo e.V.</h2><p>Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen. Gemeinsam
+wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen einreißen und dafür sorgen, dass Kinder einen Ort haben, an dem sie miteinander aufwachsen und Spaß haben, egal woher sie kommen. Helfen Sie uns das Projekt zu finanzieren.</p>
 			</div>
 		</div>
 		<div class="col-sm-8 col-xs-12 hidden intro">
@@ -107,7 +109,12 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	</div>
 	<div class="row kontinente fliesstext">
 		<div class="col-xs-12">
-			<p>Erste Planungsideen entwickelte das Grünflächenamt bereits 2009. Da zum Spielplatzkonzept die Einbeziehung von Kindern verschiedenerHerkunft gehörte, suchten wir international ausgerichtete Schulen, die sich an der Umsetzung beteiligen wollten. Die BBIS (Berlin Brandenburg International School) haben wir schließlich für dieses Projekt ausgewählt. In drei Workshop Sitzungen entwickelten die jungen Schüler der BBIS aus 12 Nationen zwischen 11 und 16 Jahren viele Bebauungsvorschläge. Die Ideen der Kinder sind, wie könnte es anders sein, kreativ, bestechend einleuchtend und lebensfroh.<br>Ihre erste Aufgabe war, die Kontinente unserer Erde auf ihre Wesensmerkmale zu reduzieren. Doch schon bei den Kontinentumrissen folgten sie mehr der Intuition als der Realität. Sie entschieden sich für eine freie Darstellung. Statt die realen Kontinentumrisse 1:1 umzusetzen, legten sie die Formen der Kontinente so an, dass sie zu den nachfolgenden Ideen passten und die Baufläche optimal ausgenutzt wird. So einfach sieht die Welt für Kinder aus!<br> Im nächsten Schritt entwickelten sie aus den Ikonen der Kontinente einzigartige Spielgeräte.<br>Dazu stellten sie sich die  Frage: ‚Was fällt mir als erstes ein, wenn ich an diesen Kontinent denke?ʻ Im Folgenden sollen die herausragendsten Spielgeräteideen aufgezählt werden. Neben diesen gibt es für jeden Kontinent noch viele weitere Spielgeräte, die <a href="images/lageplan-A.jpg" class="popBig">hier</a> dokumentiert sind.</p>		
+			<p>Erste Planungsideen entwickelte das Grünflächenamt bereits 2009. Da zum Spielplatzkonzept die Einbeziehung von Kindern verschiedener
+Herkunft gehörte, suchten wir international ausgerichtete Schulen, die sich an der Umsetzung beteiligen wollten. Die BBIS (Berlin Brandenburg International School) haben wir schließlich für dieses Projekt ausgewählt. In drei Workshop Sitzungen entwickelten die jungen Schüler der BBIS aus 12 Nationen zwischen 11 und 16 Jahren viele Bebauungsvorschläge. Die Ideen der Kinder sind, wie könnte es anders sein, kreativ, bestechend einleuchtend und lebensfroh.<br>
+Ihre erste Aufgabe war, die Kontinente unserer Erde auf ihre Wesensmerkmale zu reduzieren. Doch schon bei den Kontinentumrissen folgten sie mehr der Intuition als der Realität. Sie entschieden sich für eine freie Darstellung. Statt die realen Kontinentumrisse 1:1 umzusetzen, legten sie die Formen der Kontinente so an, dass sie zu den nachfolgenden Ideen passten und die Baufläche optimal ausgenutzt wird. So einfach sieht die Welt für Kinder aus!<br> 
+Im nächsten Schritt entwickelten sie aus den Ikonen der Kontinente einzigartige Spielgeräte.<br>
+Dazu stellten sie sich die  Frage: ‚Was fällt mir als erstes ein, wenn ich an diesen Kontinent denke?ʻ Im Folgenden sollen die herausragendsten Spielgeräteideen aufgezählt werden. Neben diesen gibt es für jeden Kontinent noch viele weitere Spielgeräte, die <a href="images/lageplan-A.jpg" class="popBig">hier</a> dokumentiert sind.
+</p>		
 		</div>
 	</div>
 	
@@ -116,7 +123,6 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	<div class="row kontinentkarten nord-amerika">
 		<div class="col-xs-6">
 			<div class="block">
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/nordamerikaV.jpg" alt="Nord-Amerika Wolkenkratzer">
@@ -125,7 +131,6 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 							<img class="img-responsive lazy" data-original="images/entwurf/nord-amerika.jpg" alt="Nord-Amerika Wolkenkratzer">
 						</div>
 					</div>
-				</div>
 			</div>
 		</div>
 		<div class="col-xs-6 text">
@@ -147,7 +152,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 		<div class="col-xs-6">
 			
 			<div class="block">
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flip-container">
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/suedamerikaV.jpg" alt="Süd Amerika Fussballfeld">
@@ -163,7 +168,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	<div class="row kontinentkarten australien">
 		<div class="col-xs-6">
 			<div class="block">
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flip-container">
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/ayersrockV.jpg" alt="Fledermausschaukel in Australien">
@@ -191,7 +196,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 		</div>		
 		<div class="col-xs-6">
 			<div class="block">
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flip-container">
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/afrikaV.jpg" alt="Giraffe frisst in Afrika">
@@ -207,7 +212,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	<div class="row kontinentkarten asien">
 		<div class="col-xs-6">
 			<div class="block">
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flip-container">
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/chinesischemauerV.jpg" alt="Chinesische Mauer in Asien">
@@ -236,7 +241,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 		</div>		
 		<div class="col-xs-6 ">
 			<div class="block">
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flip-container">
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/arktisV.jpg" alt="Arktis und Antarktis">
@@ -252,7 +257,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	<div class="row kontinentkarten europa">
 		<div class="col-xs-6">
 			<div class="block">
-				<div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+				<div class="flip-container">
 					<div class="flipper">
 						<div class="front">
 							<img class="img-responsive lazy" data-original="images/kaeseV.jpg" alt="Käse in Europa">
@@ -292,7 +297,11 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	</div>
 	<div class="row paedagogik fliesstext">
 		<div class="col-xs-12">
-			<p>Ein Spielplatz ist ein wichtiger Treffpunkt für Kinder wie für Eltern. Ein Forum zum Austausch der Eltern miteinander, unter freiem Himmel, umgeben von fröhlichem Kindergeschrei. In der Mitte auf dem Nordpol, der überdachten Sitzlandschaft, hat man einen guten Blick auf das Geschehen und eine Basis für Unterhaltungen mit anderen.<br>Der Weltspielplatz bietet mit seinem großen Platzangebot den Kindern viel Abwechslung. Die vielen Betätigungsfelder bieten Ihren Kindern unzählige Anreize die Koordination zu trainieren, soziale Fähigkeiten zu entwickeln und aktiv die Welt zu erforschen, statt passiv vor dem Fernseher den Nachmittag zu verbringen.<br>Die Kontinente sind durch blaue Zwischenwege getrennt. Sie symbolisieren die Ozeane. Doch sie sind leicht überwindbar! Die Überwindung von Grenzen ist ein wichtiges Anliegen des Weltspielplatzes. Unsere national-wirtschaftliche Ausrichtung auf immer globaleres Handeln erfordert ein immer stärkeres Abbauen von Grenzen im Kopf und ein wachsendes Verständnis von anderen Kulturen und fernen Ländern.<br>Der Weltspielplatz versteht sich mehr als nur der größte von Kindern erdachte Spielplatz von Berlin zu sein. Er sieht seine Aufgabe vor allem in der pädagogischen Entwicklung von weltumspannender Völkerfreundschaft und kultureller Toleranz. Der Spielplatz wird ein Zentrum für Kinder und Eltern sein, die die ganze Erde als ihr Zuhause sehen.</p>		
+			<p>Ein Spielplatz ist ein wichtiger Treffpunkt für Kinder wie für Eltern. Ein Forum zum Austausch der Eltern miteinander, unter freiem Himmel, umgeben von fröhlichem Kindergeschrei. In der Mitte auf dem Nordpol, der überdachten Sitzlandschaft, hat man einen guten Blick auf das Geschehen und eine Basis für Unterhaltungen mit anderen.<br>
+Der Weltspielplatz bietet mit seinem großen Platzangebot den Kindern viel Abwechslung. Die vielen Betätigungsfelder bieten Ihren Kindern unzählige Anreize die Koordination zu trainieren, soziale Fähigkeiten zu entwickeln und aktiv die Welt zu erforschen, statt passiv vor dem Fernseher den Nachmittag zu verbringen.<br>
+Die Kontinente sind durch blaue Zwischenwege getrennt. Sie symbolisieren die Ozeane. Doch sie sind leicht überwindbar! Die Überwindung von Grenzen ist ein wichtiges Anliegen des Weltspielplatzes. Unsere national-wirtschaftliche Ausrichtung auf immer globaleres Handeln erfordert ein immer stärkeres Abbauen von Grenzen im Kopf und ein wachsendes Verständnis von anderen Kulturen und fernen Ländern.<br>
+Der Weltspielplatz versteht sich mehr als nur der größte von Kindern erdachte Spielplatz von Berlin zu sein. Er sieht seine Aufgabe vor allem in der pädagogischen Entwicklung von weltumspannender Völkerfreundschaft und kultureller Toleranz. Der Spielplatz wird ein Zentrum für Kinder und Eltern sein, die die ganze Erde als ihr Zuhause sehen.
+</p>		
 		</div>
 	</div>
 	<div class="row paedagogik">
@@ -332,14 +341,24 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	</div>
 	<div class="row umsetzung fliesstext">
 		<div class="col-xs-12">
-			<p>Das Planungsbüro AHNER/BREHM wurde von uns beauftragt die Ideen, Basteleien, Skizzen und 3D Computermodelle der Kinder zu konkretisieren, damit die Aussagekraft der Kontinente, die Bespielbarkeit und eine gleichmäßige Verteilung der verschiedenen Spielgerätetypen für alle Altersgruppen gegeben ist: klettern, schaukeln, wippen, rutschen, schwingen, verstecken, hangeln, kriechen, drehen, buddeln, kommunizieren und lernen. Sie waren bei den Workshops dabei, stellten Fragen und staunten über die Kreativität der Kinder. Auch wurde die für die jeweiligen Kontinente passende Bepflanzung geplant. So gibt es gibt den Dschungel, die Savanne und das Outback.</p>	
+			<p>Das Planungsbüro AHNER/BREHM wurde von uns beauftragt die Ideen, Basteleien, Skizzen und 3D Computermodelle der Kinder zu konkretisieren, damit die Aussagekraft der Kontinente, die Bespielbarkeit und eine gleichmäßige Verteilung der verschiedenen Spielgerätetypen für alle Altersgruppen gegeben ist: klettern, schaukeln, wippen, rutschen, schwingen, verstecken, hangeln, kriechen, drehen, buddeln, kommunizieren und lernen. Sie waren bei den Workshops dabei, stellten Fragen und staunten über die Kreativität der Kinder. Auch wurde die für die jeweiligen Kontinente passende Bepflanzung geplant. So gibt es gibt den Dschungel, die Savanne und das Outback.
+</p>	
 <hr>
 		</div>
 	</div>
 	<div class="row umsetzung fliesstext">
 		<div class="col-xs-12">
 			<p><a href="images/lageplan-A.jpg" class="popBig"><img src="images/lageplan-V.jpg" class="lazy lageplan"></a>Die Grundflächen und die Pflanzungen sind bereits zum größten Teil hergestellt. 2013 wurde der Weltspielplatz mit Berti Vogts eröffnet. Die Finanzierung erfolgte bis dahin aus Landes-, Bundes- und EU-Mitteln. Bereits 560.000 Euro sind in die Anlage investiert worden. Mit dem Geld wurde die gesamte Fläche erschlossen: Kontinente und Wege angelegt, Sand-, Rasenflächen und Steinbegrenzungen hergestellt sowie Gehölze und Stauden gepflanzt.
-<br>Die ersten Spielgeräte sind auch schon eingesetzt. Die Kinder warten auf den Rest. Wenn die Kinder über das Geld bestimmen könnten, wäre der Spielplatz längst fertig. Hören Sie auf die kindliche Stimme und helfen Sie uns bei der Umsetzung. <a href="https://www.betterplace.org/de/projects/30317-grosster-von-kindern-erdachter-spielplatz-der-weltspielplatz-treptower-park" target="_blank">Spenden Sie hier</a>. <br>Lassen Sie uns die Welt als Spielplatz für Kinder im idyllischen Areal des Treptower Park errichten. Ein Ausflugsort innerhalb der großen Stadt für die ganze Familie, mit Restaurants, Bootsverleih, großen Wiesen und Wasser. Und wenn die Dämmerung anbricht beginnt das schönste Abendkonzert von Berlin, vorgtragen von der größten Nachtigallenpopulation der Stadt.<br>Der Treptower Park, eine kleine, heile Welt in Berlin.<br>Der Weltspielplatz, eine kleine, heile Welt im Treptower Park.<br><br>Wir haben eine Spendenseite bei BetterPlace.org eingerichtet, eine Fundraising Seite die schon vielen NPOs geholfen hat, Gelder für gemeinnützige Projekte zu sammeln. Sie können ohne sich zu registrieren spenden und erhalten eine Spendenquittung. <br><br>Wir suchen auch nach Sponsoren, die ein ganzes Spielgerät bezahlen wollen. Warum nicht einen Milchproduzenten den Käse in Europa finanzieren lassen?</p>		
+<br>
+Die ersten Spielgeräte sind auch schon eingesetzt. Die Kinder warten auf den Rest. Wenn die Kinder über das Geld bestimmen könnten, wäre der Spielplatz längst fertig. Hören Sie auf die kindliche Stimme und helfen Sie uns bei der Umsetzung. <a href="https://www.betterplace.org/de/projects/30317-grosster-von-kindern-erdachter-spielplatz-der-weltspielplatz-treptower-park" target="_blank">Spenden Sie hier</a>. <br>
+Lassen Sie uns die Welt als Spielplatz für Kinder im idyllischen Areal des Treptower Park errichten. Ein Ausflugsort innerhalb der großen Stadt für die ganze Familie, mit Restaurants, Bootsverleih, großen Wiesen und Wasser. Und wenn die Dämmerung anbricht beginnt das schönste Abendkonzert von Berlin, vorgtragen von der größten Nachtigallenpopulation der Stadt.<br>
+Der Treptower Park, eine kleine, heile Welt in Berlin.<br>
+Der Weltspielplatz, eine kleine, heile Welt im Treptower Park.
+<br><br>
+Wir haben eine Spendenseite bei BetterPlace.org eingerichtet, eine Fundraising Seite die schon vielen NPOs geholfen hat, Gelder für gemeinnützige Projekte zu sammeln. Sie können ohne sich zu registrieren spenden und erhalten eine Spendenquittung. 
+<br><br>
+Wir suchen auch nach Sponsoren, die ein ganzes Spielgerät bezahlen wollen. Warum nicht einen Milchproduzenten den Käse in Europa finanzieren lassen?
+</p>		
 		</div>
 	</div>
 	
@@ -352,7 +371,18 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	</div>
 	<div class="row engagement fliesstext">
 		<div class="col-xs-12">
-			<p>Der Spielplatz befindet sich im Treptower Park auf Höhe der Insel der Jugend, dieüber die Abteibrücke erreichbar ist. Diese Brücke ist auch als „Brücke der Herzen“bekannt. Fast 50 blaue Herzen sind in die Brücke eingelassen. Jedes ist eine Ehrungfür Unternehmen und Prominenten, die sich sehr mit ihren Mitteln für die Förderung von Kindern eingesetzt haben. Darunter sind bekannte Namen wie Franz Beckenbauer, Rolf Zuckowski und Kurt Krömer. Hinter der Brücke der Herzen steht der Verein „MyTheo e.V.“, eine Offensive von dem Team um den blauen herzensguten Freund vieler Kinder in aller Welt: Theo Tintenklecks.<br>Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem Fleckder Erde einen Begegnungsort für Kinder aller Kulturen zu errichten. Gemeinsamwollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfeneinreißen und dafür sorgen, dass Kinder einen Ort haben, an dem sie miteinanderaufwachsen und Spaß haben, egal woher sie kommen. Helfen Sie uns das Projektzu finanzieren. Alles Geld das wir sammeln fließt in die Umsetzung desWeltspielplatzes ein.</p>		
+			<p>Der Spielplatz befindet sich im Treptower Park auf Höhe der Insel der Jugend, die
+über die Abteibrücke erreichbar ist. Diese Brücke ist auch als „Brücke der Herzen“
+bekannt. Fast 50 blaue Herzen sind in die Brücke eingelassen. Jedes ist eine Ehrung
+für Unternehmen und Prominenten, die sich sehr mit ihren Mitteln für die Förderung von Kindern eingesetzt haben. Darunter sind bekannte Namen wie Franz Beckenbauer, Rolf Zuckowski und Kurt Krömer. Hinter der Brücke der Herzen steht der Verein „MyTheo e.V.“, eine Offensive von dem Team um den blauen herzensguten Freund vieler Kinder in aller Welt: Theo Tintenklecks.<br>
+Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem Fleck
+der Erde einen Begegnungsort für Kinder aller Kulturen zu errichten. Gemeinsam
+wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen
+einreißen und dafür sorgen, dass Kinder einen Ort haben, an dem sie miteinander
+aufwachsen und Spaß haben, egal woher sie kommen. Helfen Sie uns das Projekt
+zu finanzieren. Alles Geld das wir sammeln fließt in die Umsetzung des
+Weltspielplatzes ein.
+</p>		
 		</div>
 	</div>
 	
