Fix Scrolling, Website Titel

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js'></script>
 <script type="text/javascript" src="js/scripts.js"></script>
 
-<title></title>
+<title>Weltspielplatz im Treptower Park Berlin: Größter von Kindern erdachter Spielplatz</title>
 </head>
 <body id="start">
 <div class="container">
