Kontakt, Bilder, Impressum

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	<div class="row zeile2">
 		<div class="col-sm-4 col-xs-6 intro">
 			<div class="block bild">
-				<a class="popBig" href="images/giraffe-A.jpg"><img class="img-responsive" src="images/giraffe-V.jpg" alt="Workshop mit Giraffe"></a>
+				<a class="popBig" href="images/giraffe2-A.jpg"><img class="img-responsive" src="images/giraffe2-V.jpg" alt="Workshop mit Giraffe"></a>
 			</div>
 		</div>
 		<div class="col-sm-4 col-xs-6 visible-xs intro">
@@ -76,7 +76,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 		</div>
 		<div class="col-sm-4 col-xs-6 visible-xs intro">
 			<div class="block bild">
-				<a class="popBig" href="images/kinder1-A.jpg"><img class="img-responsive" src="images/kinder1-V.jpg" alt="Workshop mit Kindern"></a>
+				<a class="popBig" href="images/arktis-A.jpg"><img class="img-responsive" src="images/arktis-V.jpg" alt="Workshop mit Kindern"></a>
 			</div>
 		</div>
 	</div>
@@ -405,7 +405,7 @@ Weltspielplatzes ein.
 	
 	
 	
-		<div class="row spenden fliesstext" id="spenden">
+	<div class="row spenden fliesstext" id="spenden">
 		<div class="col-xs-12">
 			<h1 class="text-center">Spenden
 			</h1>		
@@ -414,6 +414,31 @@ Weltspielplatzes ein.
 	<div class="row spenden fliesstext">
 		<div class="col-xs-12">
 			<p></p>		
+		</div>
+	</div>
+	
+	<div role="footer" class="row kontakt fliesstext" id="kontakt">
+		<div class="col-xs-12">
+			<h1 class="text-center">Kontakt / Impressum
+			</h1>		
+		</div>
+	</div>
+	<div class="row spenden fliesstext">
+		<div class="col-xs-12">
+			<ul>Bildnachweise
+				<li>Workshopbilder: Ahner/Brehm</li>
+				<li>Wolkenkratzer: Flügelwesen / photocase.de</li>
+				<li>Fußballer: frau.L. / photocase.de</li>
+				<li>Afrikanische Giraffe: jock+scott / photocase.de</li>
+				<li>Chinesische Mauer: ad Rian / photocase.de</li>
+				<li>Arktis: Gurkentanz / photocase.de</li>
+				<li>Käse: Francesca Schellhaas / photocase.de</li>
+				<li>Ozean: behrchen / photocase.de</li>
+				<li>Mädchen 1 / 2 / 3: chocolatto / like.eis.in.the.sunshine / hueterlukas / photocase.de</li>
+				<li>Panoramen 1 / 2: Clemens Fait</li>
+			</ul>
+			<p>Verantwortlich für den Inhalt ist das Bezirksamt Treptow Köpenick, Straßen- und Grünflächenamt. Neue Krugallee 4, 12435 Berlin. http://www.berlin.de/ba-treptow-koepenick/ </br>Tel: (030) 90297-5823, E-Mail: ingrid.lehmann@ba-tk.berlin.de</p>
+			<p>Umsetzung durch Clemens Fait</p>		
 		</div>
 	</div>
 	
