Kinder-Bild tauschen

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 		</div>
 		<div class="col-sm-4 col-xs-6 visible-xs intro">
 			<div class="block bild">
-				<a class="popBig" href="images/arktis-A.jpg"><img class="img-responsive" src="images/arktis-V.jpg" alt="Workshop mit Kindern"></a>
+				<a class="popBig" href="images/arktis-A.jpg"><img class="img-responsive" src="images/arktis-V.jpg" alt="Arktis Entwürfe"></a>
 			</div>
 		</div>
 	</div>
@@ -84,7 +84,7 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	<div class="row zeile3">
 		<div class="col-sm-4 hidden-xs intro">
 			<div class="block bild">
-				<a class="popBig" href="images/kinder1-A.jpg"><img class="img-responsive" src="images/kinder1-V.jpg" alt="Workshop mit Kindern"></a>
+				<a class="popBig" href="images/arktis-A.jpg"><img class="img-responsive" src="images/arktis-V.jpg" alt="Arktis Entwürfe"></a>
 			</div>
 		</div>
 		<div class="col-sm-4 hidden-xs intro">
