--- a/index.html
+++ b/index.html
@@ -425,8 +425,9 @@ Weltspielplatzes ein.
 	</div>
 	<div class="row kontakt fliesstext">
 		<div class="col-xs-12">
-			<p>Bildnachweise: Workshopbilder: Ahner/Brehm, Wolkenkratzer: Flügelwesen / photocase.de, Fußballer: frau.L. / photocase.de, Afrikanische Giraffe: jock+scott / photocase.de, Chinesische Mauer: ad Rian / photocase.de, Arktis: Gurkentanz / photocase.de, Käse: Francesca Schellhaas / photocase.de, Ozean: behrchen / photocase.de, Mädchen 1 / 2 / 3: chocolatto / like.eis.in.the.sunshine / hueterlukas / photocase.de, Panoramen 1 / 2: Clemens Fait/p>
-			<p>Verantwortlich für den Inhalt ist das Bezirksamt Treptow Köpenick, Straßen- und Grünflächenamt. Neue Krugallee 4, 12435 Berlin. http://www.berlin.de/ba-treptow-koepenick/ </br>Tel: (030) 90297-5823, E-Mail: ingrid.lehmann@ba-tk.berlin.de</br>Umsetzung durch Clemens Fait</p>		
+			<p>Bildnachweise: Workshopbilder: Ahner/Brehm, Wolkenkratzer: Flügelwesen / photocase.de, Fußballer: frau.L. / photocase.de, Afrikanische Giraffe: jock+scott / photocase.de, Chinesische Mauer: ad Rian / photocase.de, Arktis: Gurkentanz / photocase.de,
+			</br> Käse: Francesca Schellhaas / photocase.de, Ozean: behrchen / photocase.de, Mädchen 1 / 2 / 3: chocolatto / like.eis.in.the.sunshine / hueterlukas / photocase.de, Panoramen 1 / 2: Clemens Fait</p>
+			<p>Verantwortlich für den Inhalt ist das Bezirksamt Treptow Köpenick, Straßen- und Grünflächenamt. Neue Krugallee 4, 12435 Berlin. http://www.berlin.de/ba-treptow-koepenick/ </br>Tel: (030) 90297-5823, E-Mail: ingrid.lehmann@ba-tk.berlin.de</br>Umsetzung: fait.de</p>		
 		</div>
 	</div>
 	
