--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@ wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen 
 	</div>
 	<div class="row kontinente fliesstext">
 		<div class="col-xs-12">
-			<p>Erste Planungsideen entwickelte das Grünflächenamt bereits 2009. Da zum Spielplatzkonzept die Einbeziehung von Kindern verschiedener
-Herkunft gehörte, suchten wir international ausgerichtete Schulen, die sich an der Umsetzung beteiligen wollten. Die BBIS (Berlin Brandenburg International School) haben wir schließlich für dieses Projekt ausgewählt. In drei Workshop Sitzungen entwickelten die jungen Schüler der BBIS aus 12 Nationen zwischen 11 und 16 Jahren viele Bebauungsvorschläge. Die Ideen der Kinder sind, wie könnte es anders sein, kreativ, bestechend einleuchtend und lebensfroh.<br>
-Ihre erste Aufgabe war, die Kontinente unserer Erde auf ihre Wesensmerkmale zu reduzieren. Doch schon bei den Kontinentumrissen folgten sie mehr der Intuition als der Realität. Sie entschieden sich für eine freie Darstellung. Statt die realen Kontinentumrisse 1:1 umzusetzen, legten sie die Formen der Kontinente so an, dass sie zu den nachfolgenden Ideen passten und die Baufläche optimal ausgenutzt wird. So einfach sieht die Welt für Kinder aus!<br> 
-Im nächsten Schritt entwickelten sie aus den Ikonen der Kontinente einzigartige Spielgeräte.<br>
-Dazu stellten sie sich die  Frage: ‚Was fällt mir als erstes ein, wenn ich an diesen Kontinent denke?ʻ Im Folgenden sollen die herausragendsten Spielgeräteideen aufgezählt werden. Neben diesen gibt es für jeden Kontinent noch viele weitere Spielgeräte, die <a href="images/lageplan-A.jpg" class="popBig">hier</a> dokumentiert sind.
+			<p>Erste Planungsideen für den Spielplatz entwickelte das Grünflächenamt bereits 2009. Da zum Spielplatzkonzept die Einbeziehung von Kindern verschiedener
+Herkunft gehörte, suchten wir international ausgerichtete Schulen, die sich an der Umsetzung beteiligen wollten. Die BBIS (Berlin Brandenburg International School) haben wir schließlich für dieses Projekt ausgewählt. In drei Workshop-Sitzungen entwickelten die jungen Schüler der BBIS aus 12 Nationen kommend, im Alter zwischen 11 und 16 Jahren, viele Bebauungsvorschläge. Die Ideen der Kinder sind, wie könnte es anders sein, kreativ, bestechend einleuchtend und lebensfroh.<br>
+Die erste Aufgabe der Kinder war die Kontinente unserer Erde auf ihre Wesensmerkmale zu reduzieren. Doch schon bei den Kontinentumrissen folgten sie mehr ihrer Intuition als der Realität. Sie entschieden sich für eine freie Darstellung. Statt die realen Kontinentumrisse 1:1 umzusetzen, legten sie die Formen der Kontinente so an, dass sie zu den nachfolgenden Ideen passten und die Baufläche optimal ausgenutzt wird. So einfach sieht die Welt für Kinder aus!<br> 
+Im nächsten Schritt entwickelten sie aus den selbstgewählten Ikonen der Kontinente einzigartige Spielgeräte.<br>
+Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein, wenn ich an diesen Kontinent denke?ʻ Im Folgenden sollen die herausragendsten Spielgeräteideen aufgezählt werden. Neben diesen gibt es für jeden Kontinent noch viele weitere Spielgeräte, die <a href="images/lageplan-A.jpg" class="popBig">hier</a> dokumentiert sind.
 </p>		
 		</div>
 	</div>
@@ -155,7 +155,7 @@ Dazu stellten sie sich die  Frage: ‚Was fällt mir als erstes ein, wenn ich an
 				<h2>
 					Nord-Amerika
 				</h2>
-				<p>Nord-Amerikas Wolkenkratzer sind das Sinnbild des Kontinentes. Keine große Stadt kommt ohne sie aus. Umgesetzt in großen Klettertürmen mit Röhrenrutsche, Kletterebenen und Verbindungsgängen.</p>
+				<p>Wolkenkratzer sind das Sinnbild des Kontinents. Keine große nord-amerikanische Stadt kommt ohne sie aus. Umgesetzt in großen Klettertürmen mit Röhrenrutsche, Kletterebenen und Verbindungsgängen wird aus ihnen ein großer Spaß.</p>
 			</div>
 		</div>
 	</div>
@@ -164,7 +164,7 @@ Dazu stellten sie sich die  Frage: ‚Was fällt mir als erstes ein, wenn ich an
 			<div class="block"><h2>
 				Süd-Amerika
 			</h2>
-			<p>Für Südamerika planten sie ein mit Atzteken-Schätzen verziertes Fußballfeld inmitten der Anden. Das Fußballfeld ist schon fertig und es wird fleißig gekickt.</p></div>
+			<p>Für Südamerika planten die Kinder ein mit Atzteken-Schätzen verziertes Fußballfeld inmitten der Anden. Das Fußballfeld ist schon fertig und es wird bereits heute schon fleißig gekickt.</p></div>
 		</div>		
 		<div class="col-xs-6">
 			
@@ -201,7 +201,7 @@ Dazu stellten sie sich die  Frage: ‚Was fällt mir als erstes ein, wenn ich an
 			<div class="block"><h2>
 				Australien
 			</h2>
-			<p>In Australien soll der Ayers Rock (auch: Uluru) als mächtiger Kletterstein aufgebaut werden. Eine australische Schülerin hatte außerdem die Fledermausschwärme im Abendrot lebhaft in Erinnerung. Sie entwarf eine Fledermausschaukel.</p></div>
+			<p>In Australien soll der Ayers Rock (auch: Uluru) als mächtiger Kletterstein errichtet werden. Eine australische Schülerin hatte außerdem die Fledermausschwärme im Abendrot lebhaft in ihrer Erinnerung. Sie entwarf eine Fledermausschaukel.</p></div>
 		</div>
 	</div>
 	<div class="row kontinentkarten afrika">
@@ -209,7 +209,7 @@ Dazu stellten sie sich die  Frage: ‚Was fällt mir als erstes ein, wenn ich an
 			<div class="block"><h2>
 				Afrika
 			</h2>
-			<p>Afrika soll eine am Kletterbaum fressende Giraffe bekommen. An ihren Beinen klettert man auf ihren Rücken, den langen Hals entlang, schwingt sich in den Kletterbaum weiter oder rutscht an ihrem Hinterteil nach unten.</p></div>
+			<p>Afrika soll eine am Kletterbaum fressende Giraffe symbolisieren. An ihren Beinen klettert man auf den Rücken, am langen Hals entlang, schwingt sich in den Kletterbaum weiter oder rutscht an ihrem Hinterteil nach unten.</p></div>
 		</div>		
 		<div class="col-xs-6">
 			<div class="block">
@@ -254,7 +254,7 @@ Dazu stellten sie sich die  Frage: ‚Was fällt mir als erstes ein, wenn ich an
 			<div class="block"><h2>
 				Nord- und Südpol
 			</h2>
-			<p>Im Südpol gibt es putzige Pinguine zum Wippen. Der Nordpol wird mit der Forscherstation der zentrale Treffpunkt alle. Ein überdachtes, mehrstufiges, kreisrundes, 10 Meter breites Sitzmöbel, leicht erhöht, so dass man nach allen Kontinenten einen guten Blick hat.</p></div>
+			<p>Im Südpol gibt es putzige Pinguine zum Wippen. Der Nordpol wird mit der Forscherstation der zentrale Treffpunkt werden. Ein überdachtes, mehrstufiges, kreisrundes, 10 Meter breites Sitzmöbel, leicht erhöht, so dass man nach allen Kontinenten einen guten Blick hat.</p></div>
 		</div>		
 		<div class="col-xs-6 ">
 			<div class="block">
