--- a/index.html
+++ b/index.html
@@ -137,14 +137,41 @@ wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen 
 		</div>
 		<div class="col-sm-8 col-xs-12 hidden intro">
 			<div class="row subrow">
-				<div class="col-xs-12 text block violett">
+				<div class="col-xs-12 text block">
 					<p><strong>Im Interview:</strong> Frau Dr. ­Lehmann vom Straßen- und Grünflächenamt Köpenick, Wolf Ahner vom Planungsbüro AHNER/BREHM, ­Kinder der Sophie-Brahe Schule sowie Initiatorin Frau ­Hahnisch</p>
 				</div>
 			</div>
 		</div>
 	</div>
 
-
+<div class="row termine fliesstext">
+  <div class="col-xs-2">
+    <img src="images/01-theo-frei.png" alt="Theo Tintenklecks">
+  </div>
+  <div class="col-xs-10">
+    <h2>Theos Sommerspaß für Kinder und ihre Familien auf dem Weltspielplatz</h2>
+    <table>
+      <tr>
+        <td>08.08.2015 · 13:30 – 15:30 Uhr</td>
+        <td>
+          Spiel- und Bastelideen aus aller Welt
+        </td>
+      </tr>
+      <tr>
+        <td>15.08.2015 · 13:30 – 15:30 Uhr</td>
+        <td>
+          Dschungelmutprobe und Pinguineierlauf – Theos Fitnessspaß
+        </td>
+      </tr>
+      <tr>
+        <td>22.08.2015 · 13:30 – 15:30 Uhr</td>
+        <td>
+          Theos Mitmach-Geschichte von lustigen Wolkentieren und einem Regenbogenelefanten
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
 
 	<div class="row kontinente fliesstext" id="planung">
 		<div class="col-xs-12">
