img: Theo responsive

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen 
 
 <div class="row termine fliesstext">
   <div class="col-xs-2">
-    <img src="images/01-theo-frei.png" alt="Theo Tintenklecks">
+    <img src="images/01-theo-frei.png" alt="Theo Tintenklecks" class="img-responsive">
   </div>
   <div class="col-xs-10">
     <h2>Theos Sommerspaß für Kinder und ihre Familien auf dem Weltspielplatz</h2>
