betterPlace ersetzt, Video eingefügt, fitVids.js hinzugefügt

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js'></script>
 <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/jquery_lazyload/1.9.5/jquery.lazyload.min.js'></script>
 <script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.0.0/jquery.magnific-popup.min.js'></script>
+<script type='text/javascript' src='http://cdnjs.cloudflare.com/ajax/libs/fitvids/1.1.0/jquery.fitvids.min.js'></script>
 <script type="text/javascript" src="js/scripts.min.js"></script>
 
 <script type="text/javascript">
@@ -128,19 +129,15 @@ Wenn Kinder Spielplätze entwerfen.</h2>
 	</div>
 
 	<div class="row zeile4">
-		<div class="col-sm-12 col-xs-12 intro">
+		<div class="col-sm-4 col-xs-12 intro hidden">
 			<div class="block height-x2 violett text">
 				<h2>Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des
 MyTheo e.V.</h2><p>Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen. Gemeinsam
 wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen einreißen und dafür sorgen, dass Kinder einen Ort haben, an dem sie miteinander aufwachsen und Spaß haben, egal woher sie kommen. Helfen Sie uns das Projekt zu finanzieren.</p>
 			</div>
 		</div>
-		<div class="col-sm-8 col-xs-12 hidden intro">
-			<div class="row subrow">
-				<div class="col-xs-12 text block">
-					<p><strong>Im Interview:</strong> Frau Dr. ­Lehmann vom Straßen- und Grünflächenamt Köpenick, Wolf Ahner vom Planungsbüro AHNER/BREHM, ­Kinder der Sophie-Brahe Schule sowie Initiatorin Frau ­Hahnisch</p>
-				</div>
-			</div>
+		<div class="col-sm-12 col-xs-12 videos">
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/OFdqumBi8lA?rel=0" frameborder="0" allowfullscreen></iframe>
 		</div>
 	</div>
 
@@ -426,7 +423,7 @@ Lassen Sie uns die Welt als Spielplatz für Kinder im idyllischen Areal des Trep
 Der Treptower Park, eine kleine, heile Welt in Berlin.<br>
 Der Weltspielplatz, eine kleine, heile Welt im Treptower Park.
 <br><br>
-Wir haben eine Spendenseite bei BetterPlace.org eingerichtet, eine Fundraising Seite die schon vielen NPOs geholfen hat, Gelder für gemeinnützige Projekte zu sammeln. Sie können ohne sich zu registrieren spenden und erhalten eine Spendenquittung.
+Wir haben eine Spendenseite bei <a href="https://www.startnext.com/weltspielplatz" target="_blank" title="StartNext">Startnext</a> eingerichtet. <!--, eine Fundraising Seite die schon vielen NPOs geholfen hat, Gelder für gemeinnützige Projekte zu sammeln.--> Sie können ohne sich zu registrieren spenden und erhalten eine Spendenquittung.
 <br><br>
 Wir suchen auch nach Sponsoren, die ein ganzes Spielgerät bezahlen wollen. Warum nicht einen Milchproduzenten den Käse in Europa finanzieren lassen?
 </p>
