--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 			<div class="block"><h2>
 				Süd-Amerika
 			</h2>
-			<p>Für Südamerika planten die Kinder ein mit Atzteken-Schätzen verziertes Fußballfeld inmitten der Anden. Das Fußballfeld ist schon fertig und es wird bereits heute schon fleißig gekickt.</p></div>
+			<p>Für Südamerika planten die Kinder ein mit Azteken-Schätzen verziertes Fußballfeld inmitten der Anden. Das Fußballfeld ist schon fertig und es wird bereits heute schon fleißig gekickt.</p></div>
 		</div>
 		<div class="col-xs-6">
 
