Newsletter und Statnext Button, Theo weg

--- a/index.html
+++ b/index.html
@@ -142,31 +142,14 @@ wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen 
 	</div>
 
 <div class="row termine fliesstext">
-  <div class="col-xs-2">
-    <img src="images/01-theo-frei.png" alt="Theo Tintenklecks" class="img-responsive">
+  <div class="col-xs-3">
+    <iframe height="300" frameborder="0" width="200" scrolling="no" allowtransparency="true" style="height: 300px; width: auto;" src="https://www.startnext.com/weltspielplatz/widget/?w=200&amp;h=300&amp;l=de"></iframe>
   </div>
-  <div class="col-xs-10">
-    <h2>Theos Sommerspaß für Kinder und ihre Familien auf dem Weltspielplatz</h2>
-    <table>
-      <tr>
-        <td>08.08.2015 · 13:30 – 15:30 Uhr</td>
-        <td>
-          Spiel- und Bastelideen aus aller Welt
-        </td>
-      </tr>
-      <tr>
-        <td>15.08.2015 · 13:30 – 15:30 Uhr</td>
-        <td>
-          Dschungelmutprobe und Pinguineierlauf – Theos Fitnessspaß
-        </td>
-      </tr>
-      <tr>
-        <td>22.08.2015 · 13:30 – 15:30 Uhr</td>
-        <td>
-          Theos Mitmach-Geschichte von lustigen Wolkentieren und einem Regenbogenelefanten
-        </td>
-      </tr>
-    </table>
+  <div class="col-xs-9">
+  <h1>Finanzierungsphase gestartet</h1>
+    <p class="oc">Los geht's! Wir sind in der Finanzierungsphase! Lasst uns den Taumspielplatz der Kinder bauen.<br>
+    Mehr über den Kampagnenstart findest Du in unserem <a href="launch.html?pk_campaign=launch&pk_kwd=Querverweis">Newsletter</a>.
+    </p>
   </div>
 </div>
 
