facebook und mobile

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel='stylesheet' id='stylesheet-weltspielplatz'  href='./css/custom-style.css' type='text/css' media='all' />
 <link rel='stylesheet' id='animatecss'  href='//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css' type='text/css' media='all' />
@@ -40,6 +41,15 @@
     }
 // -->
 </script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/de_DE/sdk.js#xfbml=1&version=v2.4";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 
 <title>Weltspielplatz im Treptower Park Berlin: Größter von Kindern erdachter Spielplatz</title>
 </head>
@@ -50,6 +60,7 @@
             <div class="col-xs-12">
                 <div class="menu">
                     <ul id="navigation">
+                        <li class="hidden">Menü</li>
                         <li><a href="#start">Start</a></li>
                         <li><a href="#planung">Planung</a></li>
                         <li><a href="#paedagogik">Pädagoik</a></li>
@@ -142,14 +153,17 @@ wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen 
 	</div>
 
 <div class="row termine fliesstext">
-  <div class="col-xs-3">
+  <div class="col-xs-12 col-sm-3">
     <iframe height="300" frameborder="0" width="200" scrolling="no" allowtransparency="true" style="height: 300px; width: auto;" src="https://www.startnext.com/weltspielplatz/widget/?w=200&amp;h=300&amp;l=de"></iframe>
   </div>
-  <div class="col-xs-9">
+  <div class="col-xs-12 col-sm-6">
   <h1>Finanzierungsphase gestartet</h1>
     <p class="oc">Los geht's! Wir sind in der Finanzierungsphase! Lasst uns den Taumspielplatz der Kinder bauen.<br>
     Mehr über den Kampagnenstart findest Du in unserem <a href="launch.html?pk_campaign=launch&pk_kwd=Querverweis">Newsletter</a>.
     </p>
+  </div>
+  <div class="col-xs-12 col-sm-3">
+    <div class="fb-page" data-href="https://www.facebook.com/weltspielplatz" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/weltspielplatz"><a href="https://www.facebook.com/weltspielplatz">Weltspielplatz Treptower Park</a></blockquote></div></div>
   </div>
 </div>
 
@@ -172,7 +186,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 
 
 	<div class="row kontinentkarten nord-amerika">
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-sm-6">
 			<div class="block">
 					<div class="flipper">
 						<div class="front">
@@ -184,7 +198,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 					</div>
 			</div>
 		</div>
-		<div class="col-xs-6 text">
+		<div class="col-xs-12 col-sm-6 text">
 			<div class="block">
 				<h2>
 					Nord-Amerika
@@ -194,14 +208,13 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 		</div>
 	</div>
 	<div class="row kontinentkarten sued-amerika">
-		<div class="col-xs-6 text">
+		<div class="col-xs-12 col-sm-6 text">
 			<div class="block"><h2>
 				Süd-Amerika
 			</h2>
 			<p>Für Südamerika planten die Kinder ein mit Azteken-Schätzen verziertes Fußballfeld inmitten der Anden. Das Fußballfeld ist schon fertig und es wird bereits heute schon fleißig gekickt.</p></div>
 		</div>
-		<div class="col-xs-6">
-
+		<div class="col-xs-12 col-sm-6">
 			<div class="block">
 				<div class="flip-container">
 					<div class="flipper">
@@ -217,7 +230,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 		</div>
 	</div>
 	<div class="row kontinentkarten australien">
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-sm-6">
 			<div class="block">
 				<div class="flip-container">
 					<div class="flipper">
@@ -231,7 +244,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6 text">
+		<div class="col-xs-12 col-sm-6 text">
 			<div class="block"><h2>
 				Australien
 			</h2>
@@ -239,13 +252,13 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 		</div>
 	</div>
 	<div class="row kontinentkarten afrika">
-		<div class="col-xs-6 text">
+		<div class="col-xs-12 col-sm-6 text">
 			<div class="block"><h2>
 				Afrika
 			</h2>
 			<p>Afrika soll eine am Kletterbaum fressende Giraffe symbolisieren. An ihren Beinen klettert man auf den Rücken, am langen Hals entlang, schwingt sich in den Kletterbaum weiter oder rutscht an ihrem Hinterteil nach unten.</p></div>
 		</div>
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-sm-6">
 			<div class="block">
 				<div class="flip-container">
 					<div class="flipper">
@@ -261,7 +274,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 		</div>
 	</div>
 	<div class="row kontinentkarten asien">
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-sm-6">
 			<div class="block">
 				<div class="flip-container">
 					<div class="flipper">
@@ -275,7 +288,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6 text">
+		<div class="col-xs-12 col-sm-6 text">
 			<div class="block"><h2>
 				Asien
 			</h2>
@@ -284,13 +297,13 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 		</div>
 	</div>
 	<div class="row kontinentkarten arktis">
-		<div class="col-xs-6 text">
+		<div class="col-xs-12 col-sm-6 text">
 			<div class="block"><h2>
 				Nord- und Südpol
 			</h2>
 			<p>Im Südpol gibt es putzige Pinguine zum Wippen. Der Nordpol wird mit der Forscherstation der zentrale Treffpunkt werden. Ein überdachtes, mehrstufiges, kreisrundes, 10 Meter breites Sitzmöbel, leicht erhöht, so dass man nach allen Kontinenten einen guten Blick hat.</p></div>
 		</div>
-		<div class="col-xs-6 ">
+		<div class="col-xs-12 col-sm-6">
 			<div class="block">
 				<div class="flip-container">
 					<div class="flipper">
@@ -306,7 +319,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 		</div>
 	</div>
 	<div class="row kontinentkarten europa">
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-sm-6">
 			<div class="block">
 				<div class="flip-container">
 					<div class="flipper">
@@ -320,7 +333,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6 text">
+		<div class="col-xs-12 col-sm-6 text">
 			<div class="block"><h2>
 				Europa
 			</h2>
@@ -328,13 +341,13 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 		</div>
 	</div>
 	<div class="row kontinentkarten ozean">
-		<div class="col-xs-6 text">
+		<div class="col-xs-12 col-sm-6 text">
 			<div class="block"><h2>
 				Ozeane
 			</h2>
 			<p>Die Kontinente sind durch blaue Zwischen­wege getrennt. Sie symbolisieren die Ozeane. Doch sie sind leicht überwindbar! Die Überwindung von Grenzen ist ein wichtiges Anliegen des Weltspielplatzes.</p></div>
 		</div>
-		<div class="col-xs-6">
+		<div class="col-xs-12 col-sm-6">
 			<div class="block"><img class="img-responsive lazy" data-original="images/ozeanV.jpg" alt="Ozeane"></div>
 		</div>
 	</div>
@@ -459,12 +472,12 @@ Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem F
 			Ayers Rock: 12frames / photocase.de<br> Käse: Francesca Schellhaas / photocase.de, <br>Ozean: behrchen / photocase.de, <br>Mädchen 1 / 2 / 3: chocolatto / like.eis.in.the.sunshine / hueterlukas / photocase.de, <br>Panoramen 1 / 2: Clemens Fait
 			</p>
 		</div>
-    <div class="col-md-6">
+    <div class="col-md-6 col-xs-12">
 			<p class="oc"><strong>Verantwortlich</strong> für den Inhalt ist das <br>Bezirksamt Treptow Köpenick, Straßen- und Grünflächenamt<br>
       Neue Krugallee 4, 12435 Berlin</p>
       <a target="_blank"  href="http://www.berlin.de/ba-treptow-koepenick/politik-und-verwaltung/aemter/strassen-und-gruenflaechenamt/"><img class="img-responsive" src="images/ba-tk-logo.gif" alt="Bezirksamt Treptow Köpenick Berlin Logo" style="width: 75%"/></a>
 		</div>
-    <div class="col-md-6">
+    <div class="col-md-6 col-xs-12">
 			<p class="oc"><strong>Internet: </strong><a target="_blank" href="http://www.berlin.de/ba-treptow-koepenick/">berlin.de/ba-treptow-koepenick</a><br><strong>Tel: </strong>(030) 90297-5823 <br><strong>E-Mail: </strong><a href="javascript:linkTo_UnCryptMailto('nbjmup;jogpAxfmutqjfmqmbu{/ef');">info[ät]weltspielplatz[punkt]de</a>
       <!--<a href="javascript:linkTo_UnCryptMailto('nbjmup;johsje/mfinbooAcb.ul/cfsmjo/ef');">ingrid[punkt]lehmann[ät]ba-tk[punkt]berlin[punkt] de</a>--><br><strong>Umsetzung: </strong><a href="http://fait.de">fait.de</a></p>
 		</div>
