responsive, meta description, logo nachweis

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1">
+<meta name="description" content="Der Weltspielplatz ist ein Projekt des Bezirksamts Treptow-Köpenick und des MyTheo e.V. Er ist der größte von Kindern erdachte Spielplatz und das engagierteste Projekt, um Kinder aus aller Welt zusammen zu bringen.">
+<meta name="viewport" content="width=768, user-scalable=yes, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel='stylesheet' id='stylesheet-weltspielplatz'  href='./css/custom-style.css' type='text/css' media='all' />
 <link rel='stylesheet' id='animatecss'  href='//cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.min.css' type='text/css' media='all' />
@@ -153,16 +154,11 @@ wollen wir eine bessere Welt für unsere Kinder schaffen, Mauern in den Köpfen 
 	</div>
 
 <div class="row termine fliesstext">
-  <div class="col-xs-12 col-sm-3">
+  <div class="col-xs-12 col-sm-4 col-md-3">
     <iframe height="300" frameborder="0" width="200" scrolling="no" allowtransparency="true" style="height: 300px; width: auto;" src="https://www.startnext.com/weltspielplatz/widget/?w=200&amp;h=300&amp;l=de"></iframe>
   </div>
-  <div class="col-xs-12 col-sm-6">
-  <h1>Finanzierungsphase gestartet</h1>
-    <p class="oc">Los geht's! Wir sind in der Finanzierungsphase! Lasst uns den Taumspielplatz der Kinder bauen.<br>
-    Mehr über den Kampagnenstart findest Du in unserem <a href="launch.html?pk_campaign=launch&pk_kwd=Querverweis">Newsletter</a>.
-    </p>
-  </div>
-  <div class="col-xs-12 col-sm-3">
+
+  <div class="col-xs-12 col-sm-8">
     <div class="fb-page" data-href="https://www.facebook.com/weltspielplatz" data-tabs="timeline" data-small-header="true" data-adapt-container-width="true" data-hide-cover="true" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/weltspielplatz"><a href="https://www.facebook.com/weltspielplatz">Weltspielplatz Treptower Park</a></blockquote></div></div>
   </div>
 </div>
@@ -186,7 +182,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 
 
 	<div class="row kontinentkarten nord-amerika">
-		<div class="col-xs-12 col-sm-6">
+		<div class="col-xs-6 col-sm-6">
 			<div class="block">
 					<div class="flipper">
 						<div class="front">
@@ -198,7 +194,7 @@ Dazu stellten sie sich die grundlegende Frage: ‚Was fällt mir als erstes ein,
 					</div>
 			</div>
 		</div>
-		<div class="col-xs-12 col-sm-6 text">
+		<div class="col-xs-6 col-sm-6 text">
 			<div class="block">
 				<h2>
 					Nord-Amerika
@@ -468,6 +464,9 @@ Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem F
 	</div>
 	<div class="row kontakt fliesstext">
 		<div class="col-xs-12">
+      <p>
+        <strong>Logo: </strong>Leyla Sehar-Madauß, Schülerin der BEST-Sabel Designschule, Fachbereich Grafik
+      </p>
 			<p><strong>Bildnachweise: </strong>Workshopbilder: Ahner/Brehm, <br>Wolkenkratzer: Flügelwesen / photocase.de, <br>Fußballer: frau.L. / photocase.de, <br>Afrikanische Giraffe: jock+scott / photocase.de, <br>Chinesische Mauer: ad Rian / photocase.de, <br>Arktis: Gurkentanz / photocase.de,<br>
 			Ayers Rock: 12frames / photocase.de<br> Käse: Francesca Schellhaas / photocase.de, <br>Ozean: behrchen / photocase.de, <br>Mädchen 1 / 2 / 3: chocolatto / like.eis.in.the.sunshine / hueterlukas / photocase.de, <br>Panoramen 1 / 2: Clemens Fait
 			</p>
