--- a/index.html
+++ b/index.html
@@ -464,10 +464,9 @@ Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem F
 	</div>
 	<div class="row kontakt fliesstext">
 		<div class="col-xs-12">
-      <p>
-        <strong>Logo: </strong>Leyla Sehar-Madauß, Schülerin der BEST-Sabel Designschule, Fachbereich Grafik
-      </p>
-			<p><strong>Bildnachweise: </strong>Workshopbilder: Ahner/Brehm, <br>Wolkenkratzer: Flügelwesen / photocase.de, <br>Fußballer: frau.L. / photocase.de, <br>Afrikanische Giraffe: jock+scott / photocase.de, <br>Chinesische Mauer: ad Rian / photocase.de, <br>Arktis: Gurkentanz / photocase.de,<br>
+			<p>
+        <strong>Logo: </strong>Leyla Sehar-Madauß, Schülerin der BEST-Sabel Designschule, Fachbereich Grafik<br>
+        <strong>Bildnachweise: </strong>Workshopbilder: Ahner/Brehm, <br>Wolkenkratzer: Flügelwesen / photocase.de, <br>Fußballer: frau.L. / photocase.de, <br>Afrikanische Giraffe: jock+scott / photocase.de, <br>Chinesische Mauer: ad Rian / photocase.de, <br>Arktis: Gurkentanz / photocase.de,<br>
 			Ayers Rock: 12frames / photocase.de<br> Käse: Francesca Schellhaas / photocase.de, <br>Ozean: behrchen / photocase.de, <br>Mädchen 1 / 2 / 3: chocolatto / like.eis.in.the.sunshine / hueterlukas / photocase.de, <br>Panoramen 1 / 2: Clemens Fait
 			</p>
 		</div>
