spenden kategorie added startnext

--- a/index.html
+++ b/index.html
@@ -447,12 +447,26 @@ Theo Tintenklecks und das Amt Treptow-Köpenick engagieren sich sehr an diesem F
 		</div>
 	</div>
 	<div class="row spenden fliesstext">
-		<div class="col-md-6">
+		<!-- Die Spendenkampagne über Kontodaten
+
+    <div class="col-md-6">
 			<p class="oc">Demnächst haben Sie hier die Möglichkeit über eine Spendenplattform zu spenden. Bis dahin können Sie unsere Kontodaten verwenden. <br>Sie finden die Kontodaten auch auf unserer <a target="_blank"  href="http://www.berlin.de/ba-treptow-koepenick/politik-und-verwaltung/aemter/strassen-und-gruenflaechenamt/gruen/weltspielplatz/artikel.58267.php">Berlin.de</a> Seite.
         </p>
 		</div>
+
+    -->
     <div class="col-md-6">
+			<p class="oc">Sie können auf unserer <a href="https://www.startnext.com/weltspielplatz">Startnext-Seite</a> spenden oder sich ein Dankeschön für Ihre Spende aussuchen. Wenn Sie spenden, können Sie sich aussuchen, ob Sie auf der Internetseite als Spender genannt werden wollen und ob Sie ein Spendenquittung bekommen möchten. Die Dankeschöns finanzieren zum Großteil den Spielplatz, aber Sie bekommen auch Unterstützerandenken, mit wir Ihnen danken möchten.</p>
+		</div>
+    <div class="col-md-6">
+
+      <iframe height="300" frameborder="0" width="200" scrolling="no" allowtransparency="true" style="height: 300px; width: auto;" src="https://www.startnext.com/weltspielplatz/widget/?w=200&amp;h=300&amp;l=de"></iframe>
+
+      <!--
+
 			<p class="oc"><strong>IBAN: </strong>DE55100500001613013228<br><strong>BIC: </strong>BELADEBEXXX<br><strong>Verwendungszweck: </strong>„Weltspielplatz 1239000006535”<br><strong>Ansprechpartnerin: </strong>Frau Dr. Lehmann<br><strong>Tel.: </strong>(030) 90297 – 5823</p>
+
+      -->
 		</div>
 	</div>
 
